<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/colorGraphite"
    android:orientation="vertical"
    tools:context=".activities.UpdateDataActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/updateData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/updateData"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/updateDataInfo"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/updateKmVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/colorLightGray"
        android:ems="10"
        android:hint="@string/kmVehicle"
        android:inputType="text"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorDirtyWhite" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/update" />


    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/underMaintenance"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>