<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGraphite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="10dp"
        android:text="@string/register"
        android:textColor="@color/colorDirtyWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/colorLightGray"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorDirtyWhite"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/colorLightGray"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorDirtyWhite"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/confPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/colorLightGray"
        android:ems="10"
        android:hint="@string/confPassword"
        android:inputType="textPassword"
        android:textColor="@color/colorDirtyWhite"
        android:textColorHint="@color/colorWhite" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/continueRegister" />
    <!--android:backgroundTint="@color/colorYellow"
    android:textColor="@color/colorDarkBlue"-->

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/back" />

</LinearLayout>