<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorDarkBlue"
    android:orientation="vertical"
    tools:context=".ForgottenPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgottenPass"
        android:textAlignment="center"
        android:textColor="@color/colorYellow"
        android:layout_marginTop="30dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/forgottenPassText"
        android:textAlignment="center"
        android:textColor="@color/colorYellow" />

    <EditText
        android:id="@+id/forgottenPassEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorYellow"
        android:textColorHint="@color/colorWhite"
        />

    <Button
        android:id="@+id/forgottenPassSending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/colorYellow"
        android:textColor="@color/colorDarkBlue"
        android:text="@string/send" />

    <Button
        android:id="@+id/forgottenPassBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/colorYellow"
        android:textColor="@color/colorDarkBlue"
        android:text="@string/back" />
</LinearLayout>
